# nix-lament

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  rfc0169.py
src/: D001.scm  main.rs  types.rs  util.rs
src/lamentation/: D001.rs  PY001.rs  PY001.scm  RFC0169.rs  RFC0169.scm  mod.rs
src/lamentation/snapshots/: nix_lament__lamentation__D001__lament_D001.snap  nix_lament__lamentation__D001__t__D001__positive.nix.snap  nix_lament__lamentation__PY001__lament_D001.snap  nix_lament__lamentation__PY001__t__PY001__positive.nix.snap  nix_lament__lamentation__RFC0169__t__RFC0169__cmus.nix.snap
t/: D001.nix
t/PY001/: positive.nix
