[package]
name = "nix-lament"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Bogatov <kaction@disroot.org>"]
description = "Yet another nixpkgs linter"
license = "AGPL-3.0"
repository = ""
rust-version = "1.70.0"
readme = "README.md"
exclude = ["flake.nix", "flake.lock", ".github/"]

[dependencies]
tree-sitter = "0.20.10"
tree-sitter-nix = "0.0.1"
anyhow = "1.0"
glob = "0.3"
insta = { version = "1.34", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
